--- a/Public/Templates/AdminLTE/html/Other_widgets.html
+++ b/Public/Templates/AdminLTE/html/Other_widgets.html
@@ -61,7 +61,7 @@
                       <li><!-- start message -->
                         <a href="#">
                           <div class="pull-left">
-                            <img src="../img/user2-160x160.jpg" class="img-circle" alt="User Image">
+                            <img src="__PUBLIC__/Templates/AdminLTE/img/user2-160x160.jpg" class="img-circle" alt="User Image">
                           </div>
                           <h4>
                             Support Team
@@ -73,7 +73,7 @@
                       <li>
                         <a href="#">
                           <div class="pull-left">
-                            <img src="../img/user3-128x128.jpg" class="img-circle" alt="User Image">
+                            <img src="__PUBLIC__/Templates/AdminLTE/img/user3-128x128.jpg" class="img-circle" alt="User Image">
                           </div>
                           <h4>
                             AdminLTE Design Team
@@ -85,7 +85,7 @@
                       <li>
                         <a href="#">
                           <div class="pull-left">
-                            <img src="../img/user4-128x128.jpg" class="img-circle" alt="User Image">
+                            <img src="__PUBLIC__/Templates/AdminLTE/img/user4-128x128.jpg" class="img-circle" alt="User Image">
                           </div>
                           <h4>
                             Developers
@@ -97,7 +97,7 @@
                       <li>
                         <a href="#">
                           <div class="pull-left">
-                            <img src="../img/user3-128x128.jpg" class="img-circle" alt="User Image">
+                            <img src="__PUBLIC__/Templates/AdminLTE/img/user3-128x128.jpg" class="img-circle" alt="User Image">
                           </div>
                           <h4>
                             Sales Department
@@ -109,7 +109,7 @@
                       <li>
                         <a href="#">
                           <div class="pull-left">
-                            <img src="../img/user4-128x128.jpg" class="img-circle" alt="User Image">
+                            <img src="__PUBLIC__/Templates/AdminLTE/img/user4-128x128.jpg" class="img-circle" alt="User Image">
                           </div>
                           <h4>
                             Reviewers
@@ -237,13 +237,13 @@
               <!-- User Account: style can be found in dropdown.less -->
               <li class="dropdown user user-menu">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                  <img src="../img/user2-160x160.jpg" class="user-image" alt="User Image">
+                  <img src="__PUBLIC__/Templates/AdminLTE/img/user2-160x160.jpg" class="user-image" alt="User Image">
                   <span class="hidden-xs">Alexander Pierce</span>
                 </a>
                 <ul class="dropdown-menu">
                   <!-- User image -->
                   <li class="user-header">
-                    <img src="../img/user2-160x160.jpg" class="img-circle" alt="User Image">
+                    <img src="__PUBLIC__/Templates/AdminLTE/img/user2-160x160.jpg" class="img-circle" alt="User Image">
                     <p>
                       Alexander Pierce - Web Developer
                       <small>Member since Nov. 2012</small>
@@ -287,7 +287,7 @@
           <!-- Sidebar user panel -->
           <div class="user-panel">
             <div class="pull-left image">
-              <img src="../img/user2-160x160.jpg" class="img-circle" alt="User Image">
+              <img src="__PUBLIC__/Templates/AdminLTE/img/user2-160x160.jpg" class="img-circle" alt="User Image">
             </div>
             <div class="pull-left info">
               <p>Alexander Pierce</p>
@@ -773,7 +773,7 @@
                         <span class="direct-chat-name pull-left">Alexander Pierce</span>
                         <span class="direct-chat-timestamp pull-right">23 Jan 2:00 pm</span>
                       </div><!-- /.direct-chat-info -->
-                      <img class="direct-chat-img" src="../img/user1-128x128.jpg" alt="message user image"><!-- /.direct-chat-img -->
+                      <img class="direct-chat-img" src="__PUBLIC__/Templates/AdminLTE/img/user1-128x128.jpg" alt="message user image"><!-- /.direct-chat-img -->
                       <div class="direct-chat-text">
                         Is this template really for free? That's unbelievable!
                       </div><!-- /.direct-chat-text -->
@@ -785,7 +785,7 @@
                         <span class="direct-chat-name pull-right">Sarah Bullock</span>
                         <span class="direct-chat-timestamp pull-left">23 Jan 2:05 pm</span>
                       </div><!-- /.direct-chat-info -->
-                      <img class="direct-chat-img" src="../img/user3-128x128.jpg" alt="message user image"><!-- /.direct-chat-img -->
+                      <img class="direct-chat-img" src="__PUBLIC__/Templates/AdminLTE/img/user3-128x128.jpg" alt="message user image"><!-- /.direct-chat-img -->
                       <div class="direct-chat-text">
                         You better believe it!
                       </div><!-- /.direct-chat-text -->
@@ -797,7 +797,7 @@
                     <ul class="contacts-list">
                       <li>
                         <a href="#">
-                          <img class="contacts-list-img" src="../img/user1-128x128.jpg">
+                          <img class="contacts-list-img" src="__PUBLIC__/Templates/AdminLTE/img/user1-128x128.jpg">
                           <div class="contacts-list-info">
                             <span class="contacts-list-name">
                               Count Dracula
@@ -844,7 +844,7 @@
                         <span class="direct-chat-name pull-left">Alexander Pierce</span>
                         <span class="direct-chat-timestamp pull-right">23 Jan 2:00 pm</span>
                       </div><!-- /.direct-chat-info -->
-                      <img class="direct-chat-img" src="../img/user1-128x128.jpg" alt="message user image"><!-- /.direct-chat-img -->
+                      <img class="direct-chat-img" src="__PUBLIC__/Templates/AdminLTE/img/user1-128x128.jpg" alt="message user image"><!-- /.direct-chat-img -->
                       <div class="direct-chat-text">
                         Is this template really for free? That's unbelievable!
                       </div><!-- /.direct-chat-text -->
@@ -856,7 +856,7 @@
                         <span class="direct-chat-name pull-right">Sarah Bullock</span>
                         <span class="direct-chat-timestamp pull-left">23 Jan 2:05 pm</span>
                       </div><!-- /.direct-chat-info -->
-                      <img class="direct-chat-img" src="../img/user3-128x128.jpg" alt="message user image"><!-- /.direct-chat-img -->
+                      <img class="direct-chat-img" src="__PUBLIC__/Templates/AdminLTE/img/user3-128x128.jpg" alt="message user image"><!-- /.direct-chat-img -->
                       <div class="direct-chat-text">
                         You better believe it!
                       </div><!-- /.direct-chat-text -->
@@ -868,7 +868,7 @@
                     <ul class="contacts-list">
                       <li>
                         <a href="#">
-                          <img class="contacts-list-img" src="../img/user1-128x128.jpg">
+                          <img class="contacts-list-img" src="__PUBLIC__/Templates/AdminLTE/img/user1-128x128.jpg">
                           <div class="contacts-list-info">
                             <span class="contacts-list-name">
                               Count Dracula
@@ -915,7 +915,7 @@
                         <span class="direct-chat-name pull-left">Alexander Pierce</span>
                         <span class="direct-chat-timestamp pull-right">23 Jan 2:00 pm</span>
                       </div><!-- /.direct-chat-info -->
-                      <img class="direct-chat-img" src="../img/user1-128x128.jpg" alt="message user image"><!-- /.direct-chat-img -->
+                      <img class="direct-chat-img" src="__PUBLIC__/Templates/AdminLTE/img/user1-128x128.jpg" alt="message user image"><!-- /.direct-chat-img -->
                       <div class="direct-chat-text">
                         Is this template really for free? That's unbelievable!
                       </div><!-- /.direct-chat-text -->
@@ -927,7 +927,7 @@
                         <span class="direct-chat-name pull-right">Sarah Bullock</span>
                         <span class="direct-chat-timestamp pull-left">23 Jan 2:05 pm</span>
                       </div><!-- /.direct-chat-info -->
-                      <img class="direct-chat-img" src="../img/user3-128x128.jpg" alt="message user image"><!-- /.direct-chat-img -->
+                      <img class="direct-chat-img" src="__PUBLIC__/Templates/AdminLTE/img/user3-128x128.jpg" alt="message user image"><!-- /.direct-chat-img -->
                       <div class="direct-chat-text">
                         You better believe it!
                       </div><!-- /.direct-chat-text -->
@@ -939,7 +939,7 @@
                     <ul class="contacts-list">
                       <li>
                         <a href="#">
-                          <img class="contacts-list-img" src="../img/user1-128x128.jpg">
+                          <img class="contacts-list-img" src="__PUBLIC__/Templates/AdminLTE/img/user1-128x128.jpg">
                           <div class="contacts-list-info">
                             <span class="contacts-list-name">
                               Count Dracula
@@ -986,7 +986,7 @@
                         <span class="direct-chat-name pull-left">Alexander Pierce</span>
                         <span class="direct-chat-timestamp pull-right">23 Jan 2:00 pm</span>
                       </div><!-- /.direct-chat-info -->
-                      <img class="direct-chat-img" src="../img/user1-128x128.jpg" alt="message user image"><!-- /.direct-chat-img -->
+                      <img class="direct-chat-img" src="__PUBLIC__/Templates/AdminLTE/img/user1-128x128.jpg" alt="message user image"><!-- /.direct-chat-img -->
                       <div class="direct-chat-text">
                         Is this template really for free? That's unbelievable!
                       </div><!-- /.direct-chat-text -->
@@ -998,7 +998,7 @@
                         <span class="direct-chat-name pull-right">Sarah Bullock</span>
                         <span class="direct-chat-timestamp pull-left">23 Jan 2:05 pm</span>
                       </div><!-- /.direct-chat-info -->
-                      <img class="direct-chat-img" src="../img/user3-128x128.jpg" alt="message user image"><!-- /.direct-chat-img -->
+                      <img class="direct-chat-img" src="__PUBLIC__/Templates/AdminLTE/img/user3-128x128.jpg" alt="message user image"><!-- /.direct-chat-img -->
                       <div class="direct-chat-text">
                         You better believe it!
                       </div><!-- /.direct-chat-text -->
@@ -1010,7 +1010,7 @@
                     <ul class="contacts-list">
                       <li>
                         <a href="#">
-                          <img class="contacts-list-img" src="../img/user1-128x128.jpg">
+                          <img class="contacts-list-img" src="__PUBLIC__/Templates/AdminLTE/img/user1-128x128.jpg">
                           <div class="contacts-list-info">
                             <span class="contacts-list-name">
                               Count Dracula
@@ -1046,7 +1046,7 @@
                 <!-- Add the bg color to the header using any of the bg-* classes -->
                 <div class="widget-user-header bg-yellow">
                   <div class="widget-user-image">
-                    <img class="img-circle" src="../img/user7-128x128.jpg" alt="User Avatar">
+                    <img class="img-circle" src="__PUBLIC__/Templates/AdminLTE/img/user7-128x128.jpg" alt="User Avatar">
                   </div><!-- /.widget-user-image -->
                   <h3 class="widget-user-username">Nadia Carmichael</h3>
                   <h5 class="widget-user-desc">Lead Developer</h5>
@@ -1070,7 +1070,7 @@
                   <h5 class="widget-user-desc">Founder & CEO</h5>
                 </div>
                 <div class="widget-user-image">
-                  <img class="img-circle" src="../img/user1-128x128.jpg" alt="User Avatar">
+                  <img class="img-circle" src="__PUBLIC__/Templates/AdminLTE/img/user1-128x128.jpg" alt="User Avatar">
                 </div>
                 <div class="box-footer">
                   <div class="row">
@@ -1105,7 +1105,7 @@
                   <h5 class="widget-user-desc">Web Designer</h5>
                 </div>
                 <div class="widget-user-image">
-                  <img class="img-circle" src="../img/user3-128x128.jpg" alt="User Avatar">
+                  <img class="img-circle" src="__PUBLIC__/Templates/AdminLTE/img/user3-128x128.jpg" alt="User Avatar">
                 </div>
                 <div class="box-footer">
                   <div class="row">
@@ -1150,7 +1150,7 @@
                   </div><!-- /.box-tools -->
                 </div><!-- /.box-header -->
                 <div class='box-body'>
-                  <img class="img-responsive pad" src="../img/photo2.png" alt="Photo">
+                  <img class="img-responsive pad" src="__PUBLIC__/Templates/AdminLTE/img/photo2.png" alt="Photo">
                   <p>I took this photo this morning. What do you guys think?</p>
                   <button class='btn btn-default btn-xs'><i class='fa fa-share'></i> Share</button>
                   <button class='btn btn-default btn-xs'><i class='fa fa-thumbs-o-up'></i> Like</button>
@@ -1184,7 +1184,7 @@
                 </div><!-- /.box-footer -->
                 <div class="box-footer">
                   <form action="#" method="post">
-                    <img class="img-responsive img-circle img-sm" src="../img/user4-128x128.jpg" alt="alt text">
+                    <img class="img-responsive img-circle img-sm" src="__PUBLIC__/Templates/AdminLTE/img/user4-128x128.jpg" alt="alt text">
                     <!-- .img-push is used to add margin to elements next to floating images -->
                     <div class="img-push">
                       <input type="text" class="form-control input-sm" placeholder="Press enter to post comment">
@@ -1221,7 +1221,7 @@
 
                   <!-- Attachment -->
                   <div class="attachment-block clearfix">
-                    <img class="attachment-img" src="../img/photo1.png" alt="attachment image">
+                    <img class="attachment-img" src="__PUBLIC__/Templates/AdminLTE/img/photo1.png" alt="attachment image">
                     <div class="attachment-pushed">
                       <h4 class="attachment-heading"><a href="http://www.lipsum.com/">Lorem ipsum text generator</a></h4>
                       <div class="attachment-text">
@@ -1265,7 +1265,7 @@
                 </div><!-- /.box-footer -->
                 <div class="box-footer">
                   <form action="#" method="post">
-                    <img class="img-responsive img-circle img-sm" src="../img/user4-128x128.jpg" alt="alt text">
+                    <img class="img-responsive img-circle img-sm" src="__PUBLIC__/Templates/AdminLTE/img/user4-128x128.jpg" alt="alt text">
                     <!-- .img-push is used to add margin to elements next to floating images -->
                     <div class="img-push">
                       <input type="text" class="form-control input-sm" placeholder="Press enter to post comment">
@@ -1462,8 +1462,8 @@
     <!-- FastClick -->
     <script src="__PUBLIC__/plugins/fastclick/fastclick.min.js"></script>
     <!-- AdminLTE App -->
-    <script src="../js/app.min.js"></script>
+    <script src="__PUBLIC__/Templates/AdminLTE/js/app.min.js"></script>
     <!-- AdminLTE for demo purposes -->
-    <script src="../js/demo.js"></script>
+    <script src="__PUBLIC__/Templates/AdminLTE/js/demo.js"></script>
   </body>
 </html>
