--- a/Public/Templates/AdminLTE/html/index2.html
+++ b/Public/Templates/AdminLTE/html/index2.html
@@ -63,7 +63,7 @@
                       <li><!-- start message -->
                         <a href="#">
                           <div class="pull-left">
-                            <img src="../img/user2-160x160.jpg" class="img-circle" alt="User Image">
+                            <img src="__PUBLIC__/Templates/AdminLTE/img/user2-160x160.jpg" class="img-circle" alt="User Image">
                           </div>
                           <h4>
                             Support Team
@@ -75,7 +75,7 @@
                       <li>
                         <a href="#">
                           <div class="pull-left">
-                            <img src="../img/user3-128x128.jpg" class="img-circle" alt="User Image">
+                            <img src="__PUBLIC__/Templates/AdminLTE/img/user3-128x128.jpg" class="img-circle" alt="User Image">
                           </div>
                           <h4>
                             AdminLTE Design Team
@@ -87,7 +87,7 @@
                       <li>
                         <a href="#">
                           <div class="pull-left">
-                            <img src="../img/user4-128x128.jpg" class="img-circle" alt="User Image">
+                            <img src="__PUBLIC__/Templates/AdminLTE/img/user4-128x128.jpg" class="img-circle" alt="User Image">
                           </div>
                           <h4>
                             Developers
@@ -99,7 +99,7 @@
                       <li>
                         <a href="#">
                           <div class="pull-left">
-                            <img src="../img/user3-128x128.jpg" class="img-circle" alt="User Image">
+                            <img src="__PUBLIC__/Templates/AdminLTE/img/user3-128x128.jpg" class="img-circle" alt="User Image">
                           </div>
                           <h4>
                             Sales Department
@@ -111,7 +111,7 @@
                       <li>
                         <a href="#">
                           <div class="pull-left">
-                            <img src="../img/user4-128x128.jpg" class="img-circle" alt="User Image">
+                            <img src="__PUBLIC__/Templates/AdminLTE/img/user4-128x128.jpg" class="img-circle" alt="User Image">
                           </div>
                           <h4>
                             Reviewers
@@ -239,13 +239,13 @@
               <!-- User Account: style can be found in dropdown.less -->
               <li class="dropdown user user-menu">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                  <img src="../img/user2-160x160.jpg" class="user-image" alt="User Image">
+                  <img src="__PUBLIC__/Templates/AdminLTE/img/user2-160x160.jpg" class="user-image" alt="User Image">
                   <span class="hidden-xs">Alexander Pierce</span>
                 </a>
                 <ul class="dropdown-menu">
                   <!-- User image -->
                   <li class="user-header">
-                    <img src="../img/user2-160x160.jpg" class="img-circle" alt="User Image">
+                    <img src="__PUBLIC__/Templates/AdminLTE/img/user2-160x160.jpg" class="img-circle" alt="User Image">
                     <p>
                       Alexander Pierce - Web Developer
                       <small>Member since Nov. 2012</small>
@@ -290,7 +290,7 @@
           <!-- Sidebar user panel -->
           <div class="user-panel">
             <div class="pull-left image">
-              <img src="../img/user2-160x160.jpg" class="img-circle" alt="User Image">
+              <img src="__PUBLIC__/Templates/AdminLTE/img/user2-160x160.jpg" class="img-circle" alt="User Image">
             </div>
             <div class="pull-left info">
               <p>Alexander Pierce</p>
@@ -673,7 +673,7 @@
                             <span class="direct-chat-name pull-left">Alexander Pierce</span>
                             <span class="direct-chat-timestamp pull-right">23 Jan 2:00 pm</span>
                           </div><!-- /.direct-chat-info -->
-                          <img class="direct-chat-img" src="../img/user1-128x128.jpg" alt="message user image"><!-- /.direct-chat-img -->
+                          <img class="direct-chat-img" src="__PUBLIC__/Templates/AdminLTE/img/user1-128x128.jpg" alt="message user image"><!-- /.direct-chat-img -->
                           <div class="direct-chat-text">
                             Is this template really for free? That's unbelievable!
                           </div><!-- /.direct-chat-text -->
@@ -685,7 +685,7 @@
                             <span class="direct-chat-name pull-right">Sarah Bullock</span>
                             <span class="direct-chat-timestamp pull-left">23 Jan 2:05 pm</span>
                           </div><!-- /.direct-chat-info -->
-                          <img class="direct-chat-img" src="../img/user3-128x128.jpg" alt="message user image"><!-- /.direct-chat-img -->
+                          <img class="direct-chat-img" src="__PUBLIC__/Templates/AdminLTE/img/user3-128x128.jpg" alt="message user image"><!-- /.direct-chat-img -->
                           <div class="direct-chat-text">
                             You better believe it!
                           </div><!-- /.direct-chat-text -->
@@ -697,7 +697,7 @@
                             <span class="direct-chat-name pull-left">Alexander Pierce</span>
                             <span class="direct-chat-timestamp pull-right">23 Jan 5:37 pm</span>
                           </div><!-- /.direct-chat-info -->
-                          <img class="direct-chat-img" src="../img/user1-128x128.jpg" alt="message user image"><!-- /.direct-chat-img -->
+                          <img class="direct-chat-img" src="__PUBLIC__/Templates/AdminLTE/img/user1-128x128.jpg" alt="message user image"><!-- /.direct-chat-img -->
                           <div class="direct-chat-text">
                             Working with AdminLTE on a great new app! Wanna join?
                           </div><!-- /.direct-chat-text -->
@@ -709,7 +709,7 @@
                             <span class="direct-chat-name pull-right">Sarah Bullock</span>
                             <span class="direct-chat-timestamp pull-left">23 Jan 6:10 pm</span>
                           </div><!-- /.direct-chat-info -->
-                          <img class="direct-chat-img" src="../img/user3-128x128.jpg" alt="message user image"><!-- /.direct-chat-img -->
+                          <img class="direct-chat-img" src="__PUBLIC__/Templates/AdminLTE/img/user3-128x128.jpg" alt="message user image"><!-- /.direct-chat-img -->
                           <div class="direct-chat-text">
                             I would love to.
                           </div><!-- /.direct-chat-text -->
@@ -722,7 +722,7 @@
                         <ul class="contacts-list">
                           <li>
                             <a href="#">
-                              <img class="contacts-list-img" src="../img/user1-128x128.jpg">
+                              <img class="contacts-list-img" src="__PUBLIC__/Templates/AdminLTE/img/user1-128x128.jpg">
                               <div class="contacts-list-info">
                                 <span class="contacts-list-name">
                                   Count Dracula
@@ -734,7 +734,7 @@
                           </li><!-- End Contact Item -->
                           <li>
                             <a href="#">
-                              <img class="contacts-list-img" src="../img/user7-128x128.jpg">
+                              <img class="contacts-list-img" src="__PUBLIC__/Templates/AdminLTE/img/user7-128x128.jpg">
                               <div class="contacts-list-info">
                                 <span class="contacts-list-name">
                                   Sarah Doe
@@ -746,7 +746,7 @@
                           </li><!-- End Contact Item -->
                           <li>
                             <a href="#">
-                              <img class="contacts-list-img" src="../img/user3-128x128.jpg">
+                              <img class="contacts-list-img" src="__PUBLIC__/Templates/AdminLTE/img/user3-128x128.jpg">
                               <div class="contacts-list-info">
                                 <span class="contacts-list-name">
                                   Nadia Jolie
@@ -758,7 +758,7 @@
                           </li><!-- End Contact Item -->
                           <li>
                             <a href="#">
-                              <img class="contacts-list-img" src="../img/user5-128x128.jpg">
+                              <img class="contacts-list-img" src="__PUBLIC__/Templates/AdminLTE/img/user5-128x128.jpg">
                               <div class="contacts-list-info">
                                 <span class="contacts-list-name">
                                   Nora S. Vans
@@ -770,7 +770,7 @@
                           </li><!-- End Contact Item -->
                           <li>
                             <a href="#">
-                              <img class="contacts-list-img" src="../img/user6-128x128.jpg">
+                              <img class="contacts-list-img" src="__PUBLIC__/Templates/AdminLTE/img/user6-128x128.jpg">
                               <div class="contacts-list-info">
                                 <span class="contacts-list-name">
                                   John K.
@@ -782,7 +782,7 @@
                           </li><!-- End Contact Item -->
                           <li>
                             <a href="#">
-                              <img class="contacts-list-img" src="../img/user8-128x128.jpg">
+                              <img class="contacts-list-img" src="__PUBLIC__/Templates/AdminLTE/img/user8-128x128.jpg">
                               <div class="contacts-list-info">
                                 <span class="contacts-list-name">
                                   Kenneth M.
@@ -822,42 +822,42 @@
                     <div class="box-body no-padding">
                       <ul class="users-list clearfix">
                         <li>
-                          <img src="../img/user1-128x128.jpg" alt="User Image">
+                          <img src="__PUBLIC__/Templates/AdminLTE/img/user1-128x128.jpg" alt="User Image">
                           <a class="users-list-name" href="#">Alexander Pierce</a>
                           <span class="users-list-date">Today</span>
                         </li>
                         <li>
-                          <img src="../img/user8-128x128.jpg" alt="User Image">
+                          <img src="__PUBLIC__/Templates/AdminLTE/img/user8-128x128.jpg" alt="User Image">
                           <a class="users-list-name" href="#">Norman</a>
                           <span class="users-list-date">Yesterday</span>
                         </li>
                         <li>
-                          <img src="../img/user7-128x128.jpg" alt="User Image">
+                          <img src="__PUBLIC__/Templates/AdminLTE/img/user7-128x128.jpg" alt="User Image">
                           <a class="users-list-name" href="#">Jane</a>
                           <span class="users-list-date">12 Jan</span>
                         </li>
                         <li>
-                          <img src="../img/user6-128x128.jpg" alt="User Image">
+                          <img src="__PUBLIC__/Templates/AdminLTE/img/user6-128x128.jpg" alt="User Image">
                           <a class="users-list-name" href="#">John</a>
                           <span class="users-list-date">12 Jan</span>
                         </li>
                         <li>
-                          <img src="../img/user2-160x160.jpg" alt="User Image">
+                          <img src="__PUBLIC__/Templates/AdminLTE/img/user2-160x160.jpg" alt="User Image">
                           <a class="users-list-name" href="#">Alexander</a>
                           <span class="users-list-date">13 Jan</span>
                         </li>
                         <li>
-                          <img src="../img/user5-128x128.jpg" alt="User Image">
+                          <img src="__PUBLIC__/Templates/AdminLTE/img/user5-128x128.jpg" alt="User Image">
                           <a class="users-list-name" href="#">Sarah</a>
                           <span class="users-list-date">14 Jan</span>
                         </li>
                         <li>
-                          <img src="../img/user4-128x128.jpg" alt="User Image">
+                          <img src="__PUBLIC__/Templates/AdminLTE/img/user4-128x128.jpg" alt="User Image">
                           <a class="users-list-name" href="#">Nora</a>
                           <span class="users-list-date">15 Jan</span>
                         </li>
                         <li>
-                          <img src="../img/user3-128x128.jpg" alt="User Image">
+                          <img src="__PUBLIC__/Templates/AdminLTE/img/user3-128x128.jpg" alt="User Image">
                           <a class="users-list-name" href="#">Nadia</a>
                           <span class="users-list-date">15 Jan</span>
                         </li>
@@ -1048,7 +1048,7 @@
                   <ul class="products-list product-list-in-box">
                     <li class="item">
                       <div class="product-img">
-                        <img src="../img/default-50x50.gif" alt="Product Image">
+                        <img src="__PUBLIC__/Templates/AdminLTE/img/default-50x50.gif" alt="Product Image">
                       </div>
                       <div class="product-info">
                         <a href="javascript::;" class="product-title">Samsung TV <span class="label label-warning pull-right">$1800</span></a>
@@ -1059,7 +1059,7 @@
                     </li><!-- /.item -->
                     <li class="item">
                       <div class="product-img">
-                        <img src="../img/default-50x50.gif" alt="Product Image">
+                        <img src="__PUBLIC__/Templates/AdminLTE/img/default-50x50.gif" alt="Product Image">
                       </div>
                       <div class="product-info">
                         <a href="javascript::;" class="product-title">Bicycle <span class="label label-info pull-right">$700</span></a>
@@ -1070,7 +1070,7 @@
                     </li><!-- /.item -->
                     <li class="item">
                       <div class="product-img">
-                        <img src="../img/default-50x50.gif" alt="Product Image">
+                        <img src="__PUBLIC__/Templates/AdminLTE/img/default-50x50.gif" alt="Product Image">
                       </div>
                       <div class="product-info">
                         <a href="javascript::;" class="product-title">Xbox One <span class="label label-danger pull-right">$350</span></a>
@@ -1081,7 +1081,7 @@
                     </li><!-- /.item -->
                     <li class="item">
                       <div class="product-img">
-                        <img src="../img/default-50x50.gif" alt="Product Image">
+                        <img src="__PUBLIC__/Templates/AdminLTE/img/default-50x50.gif" alt="Product Image">
                       </div>
                       <div class="product-info">
                         <a href="javascript::;" class="product-title">PlayStation 4 <span class="label label-success pull-right">$399</span></a>
@@ -1282,7 +1282,7 @@
     <!-- FastClick -->
     <script src="__PUBLIC__/plugins/fastclick/fastclick.min.js"></script>
     <!-- AdminLTE App -->
-    <script src="../js/app.min.js"></script>
+    <script src="__PUBLIC__/Templates/AdminLTE/js/app.min.js"></script>
     <!-- Sparkline -->
     <script src="__PUBLIC__/plugins/sparkline/jquery.sparkline.min.js"></script>
     <!-- jvectormap -->
@@ -1293,8 +1293,8 @@
     <!-- ChartJS 1.0.1 -->
     <script src="__PUBLIC__/plugins/chartjs/Chart.min.js"></script>
     <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
-    <script src="../js/pages/dashboard2.js"></script>
+    <script src="__PUBLIC__/Templates/AdminLTE/js/pages/dashboard2.js"></script>
     <!-- AdminLTE for demo purposes -->
-    <script src="../js/demo.js"></script>
+    <script src="__PUBLIC__/Templates/AdminLTE/js/demo.js"></script>
   </body>
 </html>
