--- a/Public/Templates/AdminLTE/html/Examples_invoice-print.html
+++ b/Public/Templates/AdminLTE/html/Examples_invoice-print.html
@@ -117,10 +117,10 @@
           <!-- accepted payments column -->
           <div class="col-xs-6">
             <p class="lead">Payment Methods:</p>
-            <img src="../img/credit/visa.png" alt="Visa">
-            <img src="../img/credit/mastercard.png" alt="Mastercard">
-            <img src="../img/credit/american-express.png" alt="American Express">
-            <img src="../img/credit/paypal2.png" alt="Paypal">
+            <img src="__PUBLIC__/Templates/AdminLTE/img/credit/visa.png" alt="Visa">
+            <img src="__PUBLIC__/Templates/AdminLTE/img/credit/mastercard.png" alt="Mastercard">
+            <img src="__PUBLIC__/Templates/AdminLTE/img/credit/american-express.png" alt="American Express">
+            <img src="__PUBLIC__/Templates/AdminLTE/img/credit/paypal2.png" alt="Paypal">
             <p class="text-muted well well-sm no-shadow" style="margin-top: 10px;">
               Etsy doostang zoodles disqus groupon greplin oooj voxy zoodles, weebly ning heekya handango imeem plugg dopplr jibjab, movity jajah plickers sifteo edmodo ifttt zimbra.
             </p>
@@ -153,6 +153,6 @@
     </div><!-- ./wrapper -->
 
     <!-- AdminLTE App -->
-    <script src="../js/app.min.js"></script>
+    <script src="__PUBLIC__/Templates/AdminLTE/js/app.min.js"></script>
   </body>
 </html>
