--- a/Public/Templates/AdminLTE/html/Examples_lockscreen.html
+++ b/Public/Templates/AdminLTE/html/Examples_lockscreen.html
@@ -35,7 +35,7 @@
       <div class="lockscreen-item">
         <!-- lockscreen image -->
         <div class="lockscreen-image">
-          <img src="../img/user1-128x128.jpg" alt="User Image">
+          <img src="__PUBLIC__/Templates/AdminLTE/img/user1-128x128.jpg" alt="User Image">
         </div>
         <!-- /.lockscreen-image -->
 
