--- a/Public/Templates/AdminLTE/html/Examples_profile.html
+++ b/Public/Templates/AdminLTE/html/Examples_profile.html
@@ -60,7 +60,7 @@
                       <li><!-- start message -->
                         <a href="#">
                           <div class="pull-left">
-                            <img src="../img/user2-160x160.jpg" class="img-circle" alt="User Image">
+                            <img src="__PUBLIC__/Templates/AdminLTE/img/user2-160x160.jpg" class="img-circle" alt="User Image">
                           </div>
                           <h4>
                             Support Team
@@ -72,7 +72,7 @@
                       <li>
                         <a href="#">
                           <div class="pull-left">
-                            <img src="../img/user3-128x128.jpg" class="img-circle" alt="User Image">
+                            <img src="__PUBLIC__/Templates/AdminLTE/img/user3-128x128.jpg" class="img-circle" alt="User Image">
                           </div>
                           <h4>
                             AdminLTE Design Team
@@ -84,7 +84,7 @@
                       <li>
                         <a href="#">
                           <div class="pull-left">
-                            <img src="../img/user4-128x128.jpg" class="img-circle" alt="User Image">
+                            <img src="__PUBLIC__/Templates/AdminLTE/img/user4-128x128.jpg" class="img-circle" alt="User Image">
                           </div>
                           <h4>
                             Developers
@@ -96,7 +96,7 @@
                       <li>
                         <a href="#">
                           <div class="pull-left">
-                            <img src="../img/user3-128x128.jpg" class="img-circle" alt="User Image">
+                            <img src="__PUBLIC__/Templates/AdminLTE/img/user3-128x128.jpg" class="img-circle" alt="User Image">
                           </div>
                           <h4>
                             Sales Department
@@ -108,7 +108,7 @@
                       <li>
                         <a href="#">
                           <div class="pull-left">
-                            <img src="../img/user4-128x128.jpg" class="img-circle" alt="User Image">
+                            <img src="__PUBLIC__/Templates/AdminLTE/img/user4-128x128.jpg" class="img-circle" alt="User Image">
                           </div>
                           <h4>
                             Reviewers
@@ -236,13 +236,13 @@
               <!-- User Account: style can be found in dropdown.less -->
               <li class="dropdown user user-menu">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                  <img src="../img/user2-160x160.jpg" class="user-image" alt="User Image">
+                  <img src="__PUBLIC__/Templates/AdminLTE/img/user2-160x160.jpg" class="user-image" alt="User Image">
                   <span class="hidden-xs">Alexander Pierce</span>
                 </a>
                 <ul class="dropdown-menu">
                   <!-- User image -->
                   <li class="user-header">
-                    <img src="../img/user2-160x160.jpg" class="img-circle" alt="User Image">
+                    <img src="__PUBLIC__/Templates/AdminLTE/img/user2-160x160.jpg" class="img-circle" alt="User Image">
                     <p>
                       Alexander Pierce - Web Developer
                       <small>Member since Nov. 2012</small>
@@ -286,7 +286,7 @@
           <!-- Sidebar user panel -->
           <div class="user-panel">
             <div class="pull-left image">
-              <img src="../img/user2-160x160.jpg" class="img-circle" alt="User Image">
+              <img src="__PUBLIC__/Templates/AdminLTE/img/user2-160x160.jpg" class="img-circle" alt="User Image">
             </div>
             <div class="pull-left info">
               <p>Alexander Pierce</p>
@@ -465,7 +465,7 @@
               <!-- Profile Image -->
               <div class="box box-primary">
                 <div class="box-body box-profile">
-                  <img class="profile-user-img img-responsive img-circle" src="../img/user4-128x128.jpg" alt="User profile picture">
+                  <img class="profile-user-img img-responsive img-circle" src="__PUBLIC__/Templates/AdminLTE/img/user4-128x128.jpg" alt="User profile picture">
                   <h3 class="profile-username text-center">Nina Mcintire</h3>
                   <p class="text-muted text-center">Software Engineer</p>
 
@@ -531,7 +531,7 @@
                     <!-- Post -->
                     <div class="post">
                       <div class="user-block">
-                        <img class="img-circle img-bordered-sm" src="../img/user1-128x128.jpg" alt="user image">
+                        <img class="img-circle img-bordered-sm" src="__PUBLIC__/Templates/AdminLTE/img/user1-128x128.jpg" alt="user image">
                         <span class='username'>
                           <a href="#">Jonathan Burke Jr.</a>
                           <a href='#' class='pull-right btn-box-tool'><i class='fa fa-times'></i></a>
@@ -557,7 +557,7 @@
                     <!-- Post -->
                     <div class="post clearfix">
                       <div class='user-block'>
-                        <img class='img-circle img-bordered-sm' src='../../img/user7-128x128.jpg' alt='user image'>
+                        <img class='img-circle img-bordered-sm' src='__PUBLIC__/Templates/AdminLTE/img/user7-128x128.jpg' alt='user image'>
                         <span class='username'>
                           <a href="#">Sarah Ross</a>
                           <a href='#' class='pull-right btn-box-tool'><i class='fa fa-times'></i></a>
@@ -587,7 +587,7 @@
                     <!-- Post -->
                     <div class="post">
                       <div class='user-block'>
-                        <img class='img-circle img-bordered-sm' src='../../img/user6-128x128.jpg' alt='user image'>
+                        <img class='img-circle img-bordered-sm' src='__PUBLIC__/Templates/AdminLTE/img/user6-128x128.jpg' alt='user image'>
                         <span class='username'>
                           <a href="#">Adam Jones</a>
                           <a href='#' class='pull-right btn-box-tool'><i class='fa fa-times'></i></a>
@@ -596,19 +596,19 @@
                       </div><!-- /.user-block -->
                       <div class='row margin-bottom'>
                         <div class='col-sm-6'>
-                          <img class='img-responsive' src='../../img/photo1.png' alt='Photo'>
+                          <img class='img-responsive' src='__PUBLIC__/Templates/AdminLTE/img/photo1.png' alt='Photo'>
                         </div><!-- /.col -->
                         <div class='col-sm-6'>
                           <div class='row'>
                             <div class='col-sm-6'>
-                              <img class='img-responsive' src='../../img/photo2.png' alt='Photo'>
+                              <img class='img-responsive' src='__PUBLIC__/Templates/AdminLTE/img/photo2.png' alt='Photo'>
                               <br>
-                              <img class='img-responsive' src='../../img/photo3.jpg' alt='Photo'>
+                              <img class='img-responsive' src='__PUBLIC__/Templates/AdminLTE/img/photo3.jpg' alt='Photo'>
                             </div><!-- /.col -->
                             <div class='col-sm-6'>
-                              <img class='img-responsive' src='../../img/photo4.jpg' alt='Photo'>
+                              <img class='img-responsive' src='__PUBLIC__/Templates/AdminLTE/img/photo4.jpg' alt='Photo'>
                               <br>
-                              <img class='img-responsive' src='../../img/photo1.png' alt='Photo'>
+                              <img class='img-responsive' src='__PUBLIC__/Templates/AdminLTE/img/photo1.png' alt='Photo'>
                             </div><!-- /.col -->
                           </div><!-- /.row -->
                         </div><!-- /.col -->
@@ -942,8 +942,8 @@
     <!-- FastClick -->
     <script src="__PUBLIC__/plugins/fastclick/fastclick.min.js"></script>
     <!-- AdminLTE App -->
-    <script src="../js/app.min.js"></script>
+    <script src="__PUBLIC__/Templates/AdminLTE/js/app.min.js"></script>
     <!-- AdminLTE for demo purposes -->
-    <script src="../js/demo.js"></script>
+    <script src="__PUBLIC__/Templates/AdminLTE/js/demo.js"></script>
   </body>
 </html>
