--- a/Public/Templates/AdminLTE/html/Layout_top-nav.html
+++ b/Public/Templates/AdminLTE/html/Layout_top-nav.html
@@ -82,7 +82,7 @@
                             <a href="#">
                               <div class="pull-left">
                                 <!-- User Image -->
-                                <img src="../img/user2-160x160.jpg" class="img-circle" alt="User Image">
+                                <img src="__PUBLIC__/Templates/AdminLTE/img/user2-160x160.jpg" class="img-circle" alt="User Image">
                               </div>
                               <!-- Message title and timestamp -->
                               <h4>
@@ -161,14 +161,14 @@
                     <!-- Menu Toggle Button -->
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                       <!-- The user image in the navbar-->
-                      <img src="../img/user2-160x160.jpg" class="user-image" alt="User Image">
+                      <img src="__PUBLIC__/Templates/AdminLTE/img/user2-160x160.jpg" class="user-image" alt="User Image">
                       <!-- hidden-xs hides the username on small devices so only the image appears. -->
                       <span class="hidden-xs">Alexander Pierce</span>
                     </a>
                     <ul class="dropdown-menu">
                       <!-- The user image in the menu -->
                       <li class="user-header">
-                        <img src="../img/user2-160x160.jpg" class="img-circle" alt="User Image">
+                        <img src="__PUBLIC__/Templates/AdminLTE/img/user2-160x160.jpg" class="img-circle" alt="User Image">
                         <p>
                           Alexander Pierce - Web Developer
                           <small>Member since Nov. 2012</small>
@@ -258,8 +258,8 @@
     <!-- FastClick -->
     <script src="__PUBLIC__/plugins/fastclick/fastclick.min.js"></script>
     <!-- AdminLTE App -->
-    <script src="../js/app.min.js"></script>
+    <script src="__PUBLIC__/Templates/AdminLTE/js/app.min.js"></script>
     <!-- AdminLTE for demo purposes -->
-    <script src="../js/demo.js"></script>
+    <script src="__PUBLIC__/Templates/AdminLTE/js/demo.js"></script>
   </body>
 </html>
