--- a/Public/Templates/AdminLTE/html/Mailbox_read-mail.html
+++ b/Public/Templates/AdminLTE/html/Mailbox_read-mail.html
@@ -65,7 +65,7 @@
                       <li><!-- start message -->
                         <a href="#">
                           <div class="pull-left">
-                            <img src="../img/user2-160x160.jpg" class="img-circle" alt="User Image">
+                            <img src="__PUBLIC__/Templates/AdminLTE/img/user2-160x160.jpg" class="img-circle" alt="User Image">
                           </div>
                           <h4>
                             Support Team
@@ -134,13 +134,13 @@
               <!-- User Account: style can be found in dropdown.less -->
               <li class="dropdown user user-menu">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                  <img src="../img/user2-160x160.jpg" class="user-image" alt="User Image">
+                  <img src="__PUBLIC__/Templates/AdminLTE/img/user2-160x160.jpg" class="user-image" alt="User Image">
                   <span class="hidden-xs">Alexander Pierce</span>
                 </a>
                 <ul class="dropdown-menu">
                   <!-- User image -->
                   <li class="user-header">
-                    <img src="../img/user2-160x160.jpg" class="img-circle" alt="User Image">
+                    <img src="__PUBLIC__/Templates/AdminLTE/img/user2-160x160.jpg" class="img-circle" alt="User Image">
                     <p>
                       Alexander Pierce - Web Developer
                       <small>Member since Nov. 2012</small>
@@ -184,7 +184,7 @@
           <!-- Sidebar user panel -->
           <div class="user-panel">
             <div class="pull-left image">
-              <img src="../img/user2-160x160.jpg" class="img-circle" alt="User Image">
+              <img src="__PUBLIC__/Templates/AdminLTE/img/user2-160x160.jpg" class="img-circle" alt="User Image">
             </div>
             <div class="pull-left info">
               <p>Alexander Pierce</p>
@@ -450,7 +450,7 @@
                       </div>
                     </li>
                     <li>
-                      <span class="mailbox-attachment-icon has-img"><img src="../img/photo1.png" alt="Attachment"></span>
+                      <span class="mailbox-attachment-icon has-img"><img src="__PUBLIC__/Templates/AdminLTE/img/photo1.png" alt="Attachment"></span>
                       <div class="mailbox-attachment-info">
                         <a href="#" class="mailbox-attachment-name"><i class="fa fa-camera"></i> photo1.png</a>
                         <span class="mailbox-attachment-size">
@@ -460,7 +460,7 @@
                       </div>
                     </li>
                     <li>
-                      <span class="mailbox-attachment-icon has-img"><img src="../img/photo2.png" alt="Attachment"></span>
+                      <span class="mailbox-attachment-icon has-img"><img src="__PUBLIC__/Templates/AdminLTE/img/photo2.png" alt="Attachment"></span>
                       <div class="mailbox-attachment-info">
                         <a href="#" class="mailbox-attachment-name"><i class="fa fa-camera"></i> photo2.png</a>
                         <span class="mailbox-attachment-size">
@@ -666,8 +666,8 @@
     <!-- FastClick -->
     <script src="__PUBLIC__/plugins/fastclick/fastclick.min.js"></script>
     <!-- AdminLTE App -->
-    <script src="../js/app.min.js"></script>
+    <script src="__PUBLIC__/Templates/AdminLTE/js/app.min.js"></script>
     <!-- AdminLTE for demo purposes -->
-    <script src="../js/demo.js"></script>
+    <script src="__PUBLIC__/Templates/AdminLTE/js/demo.js"></script>
   </body>
 </html>
