--- a/Public/Templates/AdminLTE/html/Other_calendar.html
+++ b/Public/Templates/AdminLTE/html/Other_calendar.html
@@ -64,7 +64,7 @@
                       <li><!-- start message -->
                         <a href="#">
                           <div class="pull-left">
-                            <img src="../img/user2-160x160.jpg" class="img-circle" alt="User Image">
+                            <img src="__PUBLIC__/Templates/AdminLTE/img/user2-160x160.jpg" class="img-circle" alt="User Image">
                           </div>
                           <h4>
                             Support Team
@@ -76,7 +76,7 @@
                       <li>
                         <a href="#">
                           <div class="pull-left">
-                            <img src="../img/user3-128x128.jpg" class="img-circle" alt="User Image">
+                            <img src="__PUBLIC__/Templates/AdminLTE/img/user3-128x128.jpg" class="img-circle" alt="User Image">
                           </div>
                           <h4>
                             AdminLTE Design Team
@@ -88,7 +88,7 @@
                       <li>
                         <a href="#">
                           <div class="pull-left">
-                            <img src="../img/user4-128x128.jpg" class="img-circle" alt="User Image">
+                            <img src="__PUBLIC__/Templates/AdminLTE/img/user4-128x128.jpg" class="img-circle" alt="User Image">
                           </div>
                           <h4>
                             Developers
@@ -100,7 +100,7 @@
                       <li>
                         <a href="#">
                           <div class="pull-left">
-                            <img src="../img/user3-128x128.jpg" class="img-circle" alt="User Image">
+                            <img src="__PUBLIC__/Templates/AdminLTE/img/user3-128x128.jpg" class="img-circle" alt="User Image">
                           </div>
                           <h4>
                             Sales Department
@@ -112,7 +112,7 @@
                       <li>
                         <a href="#">
                           <div class="pull-left">
-                            <img src="../img/user4-128x128.jpg" class="img-circle" alt="User Image">
+                            <img src="__PUBLIC__/Templates/AdminLTE/img/user4-128x128.jpg" class="img-circle" alt="User Image">
                           </div>
                           <h4>
                             Reviewers
@@ -241,13 +241,13 @@
               <!-- User Account: style can be found in dropdown.less -->
               <li class="dropdown user user-menu">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                  <img src="../img/user2-160x160.jpg" class="user-image" alt="User Image">
+                  <img src="__PUBLIC__/Templates/AdminLTE/img/user2-160x160.jpg" class="user-image" alt="User Image">
                   <span class="hidden-xs">Alexander Pierce</span>
                 </a>
                 <ul class="dropdown-menu">
                   <!-- User image -->
                   <li class="user-header">
-                    <img src="../img/user2-160x160.jpg" class="img-circle" alt="User Image">
+                    <img src="__PUBLIC__/Templates/AdminLTE/img/user2-160x160.jpg" class="img-circle" alt="User Image">
                     <p>
                       Alexander Pierce - Web Developer
                       <small>Member since Nov. 2012</small>
@@ -287,7 +287,7 @@
           <!-- Sidebar user panel -->
           <div class="user-panel">
             <div class="pull-left image">
-              <img src="../img/user2-160x160.jpg" class="img-circle" alt="User Image">
+              <img src="__PUBLIC__/Templates/AdminLTE/img/user2-160x160.jpg" class="img-circle" alt="User Image">
             </div>
             <div class="pull-left info">
               <p>Alexander Pierce</p>
@@ -711,9 +711,9 @@
     <!-- FastClick -->
     <script src="__PUBLIC__/plugins/fastclick/fastclick.min.js"></script>
     <!-- AdminLTE App -->
-    <script src="../js/app.min.js"></script>
+    <script src="__PUBLIC__/Templates/AdminLTE/js/app.min.js"></script>
     <!-- AdminLTE for demo purposes -->
-    <script src="../js/demo.js"></script>
+    <script src="__PUBLIC__/Templates/AdminLTE/js/demo.js"></script>
     <!-- fullCalendar 2.2.5 -->
     <script src="__PUBLIC__/plugins/moment.js/2.14.1/moment.min.js"></script>
     <script src="../plugins/fullcalendar/fullcalendar.min.js"></script>
