--- a/Public/Templates/AdminLTE/html/Tables_data.html
+++ b/Public/Templates/AdminLTE/html/Tables_data.html
@@ -63,7 +63,7 @@
                       <li><!-- start message -->
                         <a href="#">
                           <div class="pull-left">
-                            <img src="../img/user2-160x160.jpg" class="img-circle" alt="User Image">
+                            <img src="__PUBLIC__/Templates/AdminLTE/img/user2-160x160.jpg" class="img-circle" alt="User Image">
                           </div>
                           <h4>
                             Support Team
@@ -75,7 +75,7 @@
                       <li>
                         <a href="#">
                           <div class="pull-left">
-                            <img src="../img/user3-128x128.jpg" class="img-circle" alt="User Image">
+                            <img src="__PUBLIC__/Templates/AdminLTE/img/user3-128x128.jpg" class="img-circle" alt="User Image">
                           </div>
                           <h4>
                             AdminLTE Design Team
@@ -87,7 +87,7 @@
                       <li>
                         <a href="#">
                           <div class="pull-left">
-                            <img src="../img/user4-128x128.jpg" class="img-circle" alt="User Image">
+                            <img src="__PUBLIC__/Templates/AdminLTE/img/user4-128x128.jpg" class="img-circle" alt="User Image">
                           </div>
                           <h4>
                             Developers
@@ -99,7 +99,7 @@
                       <li>
                         <a href="#">
                           <div class="pull-left">
-                            <img src="../img/user3-128x128.jpg" class="img-circle" alt="User Image">
+                            <img src="__PUBLIC__/Templates/AdminLTE/img/user3-128x128.jpg" class="img-circle" alt="User Image">
                           </div>
                           <h4>
                             Sales Department
@@ -111,7 +111,7 @@
                       <li>
                         <a href="#">
                           <div class="pull-left">
-                            <img src="../img/user4-128x128.jpg" class="img-circle" alt="User Image">
+                            <img src="__PUBLIC__/Templates/AdminLTE/img/user4-128x128.jpg" class="img-circle" alt="User Image">
                           </div>
                           <h4>
                             Reviewers
@@ -240,13 +240,13 @@
               <!-- User Account: style can be found in dropdown.less -->
               <li class="dropdown user user-menu">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                  <img src="../img/user2-160x160.jpg" class="user-image" alt="User Image">
+                  <img src="__PUBLIC__/Templates/AdminLTE/img/user2-160x160.jpg" class="user-image" alt="User Image">
                   <span class="hidden-xs">Alexander Pierce</span>
                 </a>
                 <ul class="dropdown-menu">
                   <!-- User image -->
                   <li class="user-header">
-                    <img src="../img/user2-160x160.jpg" class="img-circle" alt="User Image">
+                    <img src="__PUBLIC__/Templates/AdminLTE/img/user2-160x160.jpg" class="img-circle" alt="User Image">
                     <p>
                       Alexander Pierce - Web Developer
                       <small>Member since Nov. 2012</small>
@@ -290,7 +290,7 @@
           <!-- Sidebar user panel -->
           <div class="user-panel">
             <div class="pull-left image">
-              <img src="../img/user2-160x160.jpg" class="img-circle" alt="User Image">
+              <img src="__PUBLIC__/Templates/AdminLTE/img/user2-160x160.jpg" class="img-circle" alt="User Image">
             </div>
             <div class="pull-left info">
               <p>Alexander Pierce</p>
@@ -1520,9 +1520,9 @@
     <!-- FastClick -->
     <script src="__PUBLIC__/plugins/fastclick/fastclick.min.js"></script>
     <!-- AdminLTE App -->
-    <script src="../js/app.min.js"></script>
+    <script src="__PUBLIC__/Templates/AdminLTE/js/app.min.js"></script>
     <!-- AdminLTE for demo purposes -->
-    <script src="../js/demo.js"></script>
+    <script src="__PUBLIC__/Templates/AdminLTE/js/demo.js"></script>
     <!-- page script -->
     <script>
       $(function () {
