--- a/Public/Templates/AdminLTE/html/UI_sliders.html
+++ b/Public/Templates/AdminLTE/html/UI_sliders.html
@@ -7,7 +7,7 @@
     <!-- Tell the browser to be responsive to screen width -->
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
     <!-- Bootstrap 3.3.5 -->
-    <link rel="stylesheet" href="../../bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../plugins/bootstrap/css/bootstrap.min.css">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="__PUBLIC__/plugins/font-awesome/4.5.0/css/font-awesome.min.css">
     <!-- Ionicons -->
@@ -67,7 +67,7 @@
                       <li><!-- start message -->
                         <a href="#">
                           <div class="pull-left">
-                            <img src="../img/user2-160x160.jpg" class="img-circle" alt="User Image">
+                            <img src="__PUBLIC__/Templates/AdminLTE/img/user2-160x160.jpg" class="img-circle" alt="User Image">
                           </div>
                           <h4>
                             Support Team
@@ -79,7 +79,7 @@
                       <li>
                         <a href="#">
                           <div class="pull-left">
-                            <img src="../img/user3-128x128.jpg" class="img-circle" alt="User Image">
+                            <img src="__PUBLIC__/Templates/AdminLTE/img/user3-128x128.jpg" class="img-circle" alt="User Image">
                           </div>
                           <h4>
                             AdminLTE Design Team
@@ -91,7 +91,7 @@
                       <li>
                         <a href="#">
                           <div class="pull-left">
-                            <img src="../img/user4-128x128.jpg" class="img-circle" alt="User Image">
+                            <img src="__PUBLIC__/Templates/AdminLTE/img/user4-128x128.jpg" class="img-circle" alt="User Image">
                           </div>
                           <h4>
                             Developers
@@ -103,7 +103,7 @@
                       <li>
                         <a href="#">
                           <div class="pull-left">
-                            <img src="../img/user3-128x128.jpg" class="img-circle" alt="User Image">
+                            <img src="__PUBLIC__/Templates/AdminLTE/img/user3-128x128.jpg" class="img-circle" alt="User Image">
                           </div>
                           <h4>
                             Sales Department
@@ -115,7 +115,7 @@
                       <li>
                         <a href="#">
                           <div class="pull-left">
-                            <img src="../img/user4-128x128.jpg" class="img-circle" alt="User Image">
+                            <img src="__PUBLIC__/Templates/AdminLTE/img/user4-128x128.jpg" class="img-circle" alt="User Image">
                           </div>
                           <h4>
                             Reviewers
@@ -243,13 +243,13 @@
               <!-- User Account: style can be found in dropdown.less -->
               <li class="dropdown user user-menu">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                  <img src="../img/user2-160x160.jpg" class="user-image" alt="User Image ">
+                  <img src="__PUBLIC__/Templates/AdminLTE/img/user2-160x160.jpg" class="user-image" alt="User Image ">
                   <span class="hidden-xs">Alexander Pierce</span>
                 </a>
                 <ul class="dropdown-menu">
                   <!-- User image -->
                   <li class="user-header">
-                    <img src="../img/user2-160x160.jpg" class="img-circle" alt="User Image">
+                    <img src="__PUBLIC__/Templates/AdminLTE/img/user2-160x160.jpg" class="img-circle" alt="User Image">
                     <p>
                       Alexander Pierce - Web Developer
                       <small>Member since Nov. 2012</small>
@@ -293,7 +293,7 @@
           <!-- Sidebar user panel -->
           <div class="user-panel">
             <div class="pull-left image">
-              <img src="../img/user2-160x160.jpg" class="img-circle" alt="User Image">
+              <img src="__PUBLIC__/Templates/AdminLTE/img/user2-160x160.jpg" class="img-circle" alt="User Image">
             </div>
             <div class="pull-left info">
               <p>Alexander Pierce</p>
@@ -720,9 +720,9 @@
     <!-- FastClick -->
     <script src="__PUBLIC__/plugins/fastclick/fastclick.min.js"></script>
     <!-- AdminLTE App -->
-    <script src="../js/app.min.js"></script>
+    <script src="__PUBLIC__/Templates/AdminLTE/js/app.min.js"></script>
     <!-- AdminLTE for demo purposes -->
-    <script src="../js/demo.js"></script>
+    <script src="__PUBLIC__/Templates/AdminLTE/js/demo.js"></script>
     <!-- Ion Slider -->
     <script src="__PUBLIC__/plugins/ionslider/ion.rangeSlider.min.js"></script>
     <!-- Bootstrap slider -->
