--- a/Public/Templates/AdminLTE/html/login.html
+++ b/Public/Templates/AdminLTE/html/login.html
@@ -33,22 +33,26 @@
         <p class="login-box-msg">Sign in to start your session</p>
         <form action="" method="post">
           <div class="form-group has-feedback">
-            <input type="email" class="form-control" placeholder="Email">
+            <input name="email" type="email" class="form-control" placeholder="Email">
             <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
           </div>
           <div class="form-group has-feedback">
-            <input type="password" class="form-control" placeholder="Password">
+            <input name="password" type="password" class="form-control" placeholder="Password">
             <span class="glyphicon glyphicon-lock form-control-feedback"></span>
           </div>
           <div class="row">
-            <div class="col-xs-8">
-              <div class="checkbox icheck">
-                <label>
-                  <input type="checkbox"> Remember Me
-                </label>
-              </div>
-            </div><!-- /.col -->
             <div class="col-xs-4">
+              <div class="form-group has-feedback">
+                <input name="v_code" type="text" class="form-control" placeholder="Code">
+              </div>
+            </div>
+            <div class="col-xs-4">
+              <div class="form-group has-feedback">
+                <img src="{:U('Auth/Verify/index')}">
+              </div>
+            </div>
+            <div class="col-xs-4">
+              <input name="redirect_url" type="hidden" class="form-control" value="{$redirect_url}">
               <button type="submit" class="btn btn-primary btn-block btn-flat">Sign In</button>
             </div><!-- /.col -->
           </div>
@@ -61,7 +65,7 @@
         </div><!-- /.social-auth-links -->
 
         <a href="#">I forgot my password</a><br>
-        <a href="register.html" class="text-center">Register a new membership</a>
+        <a href="{:U('Auth/Register/index')}" class="text-center">Register a new membership</a>
 
       </div><!-- /.login-box-body -->
     </div><!-- /.login-box -->
