--- a/Public/Templates/AdminLTE/html/register.html
+++ b/Public/Templates/AdminLTE/html/register.html
@@ -32,32 +32,36 @@
 
       <div class="register-box-body">
         <p class="login-box-msg">Register a new membership</p>
-        <form action="../../index.html" method="post">
+        <form action="" method="post">
           <div class="form-group has-feedback">
-            <input type="text" class="form-control" placeholder="Full name">
+            <input name="realname" type="text" class="form-control" placeholder="Full name">
             <span class="glyphicon glyphicon-user form-control-feedback"></span>
           </div>
           <div class="form-group has-feedback">
-            <input type="email" class="form-control" placeholder="Email">
+            <input name="email" type="email" class="form-control" placeholder="Email">
             <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
           </div>
           <div class="form-group has-feedback">
-            <input type="password" class="form-control" placeholder="Password">
+            <input name="password" type="password" class="form-control" placeholder="Password">
             <span class="glyphicon glyphicon-lock form-control-feedback"></span>
           </div>
           <div class="form-group has-feedback">
-            <input type="password" class="form-control" placeholder="Retype password">
+            <input name="re_password" type="password" class="form-control" placeholder="Retype password">
             <span class="glyphicon glyphicon-log-in form-control-feedback"></span>
           </div>
           <div class="row">
-            <div class="col-xs-8">
-              <div class="checkbox icheck">
-                <label>
-                  <input type="checkbox"> I agree to the <a href="#">terms</a>
-                </label>
-              </div>
-            </div><!-- /.col -->
             <div class="col-xs-4">
+              <div class="form-group has-feedback">
+                <input name="v_code" type="text" class="form-control" placeholder="Code">
+              </div>
+            </div>
+            <div class="col-xs-4">
+              <div class="form-group has-feedback">
+                <img class="v_code_img" src="{:U('Auth/Verify/index')}">
+              </div>
+            </div>
+            <div class="col-xs-4">
+              <input name="redirect_url" type="hidden" class="form-control" value="{$redirect_url}">
               <button type="submit" class="btn btn-primary btn-block btn-flat">Register</button>
             </div><!-- /.col -->
           </div>
@@ -69,7 +73,7 @@
           <a href="#" class="btn btn-block btn-social btn-google btn-flat"><i class="fa fa-google-plus"></i> Sign up using Google+</a>
         </div>
 
-        <a href="login.html" class="text-center">I already have a membership</a>
+        <a href="{:U('Auth/Login/index')}" class="text-center">I already have a membership</a>
       </div><!-- /.form-box -->
     </div><!-- /.register-box -->
 
@@ -85,6 +89,13 @@
           checkboxClass: 'icheckbox_square-blue',
           radioClass: 'iradio_square-blue',
           increaseArea: '20%' // optional
+        });
+      });
+    </script>
+    <script>
+      $(function () {
+        $('.v_code_img').on('click', function(event) {
+          $(this).attr('src', $(this).attr('src').split('?')[0]+"?timestamp="+event.timeStamp);
         });
       });
     </script>
