add something more

--- a/Public/Templates/MailTemplate/1.html
+++ b/Public/Templates/MailTemplate/1.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>{$info.title | default=""}</title>
+    <title>{$email_info.title | default=""}</title>
     <style type="text/css">
     .ReadMsgBody {
         width: 100%;
