--- a/Public/Templates/AdminLTE/html/main-header.html
+++ b/Public/Templates/AdminLTE/html/main-header.html
@@ -231,10 +231,10 @@
             <!-- Menu Footer-->
             <li class="user-footer">
               <div class="pull-left">
-                <a href="#" class="btn btn-default btn-flat">Profile</a>
+                <a href="{:U('Admin/User/profile')}" class="btn btn-default btn-flat">Profile</a>
               </div>
               <div class="pull-right">
-                <a href="#" class="btn btn-default btn-flat">Sign out</a>
+                <a href="{:U('Auth/Logout/index')}" class="btn btn-default btn-flat">Sign out</a>
               </div>
             </li>
           </ul>
